Fix Spacing and missing image

--- a/style.css
+++ b/style.css
@@ -151,6 +151,13 @@ h2{
     background-color:#4EB9B1;
 }
 
+.portfolio-2{
+    height:100%;
+    min-height:100%;
+    background-color:#3d3d3d;
+}
+
+
 .portfolio .card img{
     /*width:205px;*/
     background:#000;
@@ -189,6 +196,7 @@ a.btn:hover, .btn:hover{
 .footer {
     font-size:0.8em;
     text-align:center;
+
 }
 
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
@@ -247,7 +255,7 @@ a.btn:hover, .btn:hover{
         width:100%;
     } 
 
-    .about, .portfolio, .contact{
+    .about, .portfolio, .contact, .portfolio-2{
         padding-top:1em;
     }
 
